# dpp-test

./: README.md
test-package/calculator/: README.md  pyproject.toml
test-package/calculator-akumar/: pyproject.toml
test-package/calculator-akumar/calculator/: operator.py
test-package/calculator-akumar/calculator.egg-info/: PKG-INFO  SOURCES.txt
test-package/calculator-akumar/calculator_akumar.egg-info/: PKG-INFO  SOURCES.txt
test-package/calculator/calculator/: __init__.py
test-package/calculator/tests/: test_operator.py
test-package/nmis-dpp-test/: README.md  pyproject.toml
test-package/nmis-dpp-test/nmis_dpp_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test-package/nmis-dpp-test/tests/: test_model.py  test_part_class.py
